--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 body {
     /* background-color: pink; */
-    background-image: url("https://dev.thisiscolossal.com/wp-content/uploads/2018/09/Gris-2.jpg");
-    font-size: 200%;
+    background-image: url("https://gifdb.com/images/high/naruto-ninja-run-21jvy092jww47a6t.gif");
     font-family: Arial, Helvetica, sans-serif; /* alterar fonte */
-    background-repeat: no-repeat; /*imagem não repete*/
-    background-size: cover; /*ajuste automático*/
+    background-repeat: no-repeat; 
+    background-size: cover;
 }
 a {
     text-decoration: none;
-    color: white;
 }
 
 a:hover {
@@ -16,7 +14,6 @@ a:hover {
 }
 
 .Menu ul{
-    gap: 50px;
     display: flex;
     flex-direction: row;
 }
@@ -24,4 +21,5 @@ a:hover {
 .Menu li{
     list-style: none;  
 }
+
 
