--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    /* background-color: pink; */
-    background-image: url("https://gifdb.com/images/high/naruto-ninja-run-21jvy092jww47a6t.gif");
-    font-family: Arial, Helvetica, sans-serif; /* alterar fonte */
-    background-repeat: no-repeat; 
-    background-size: cover;
-}
+        background-color: #333; /* Cor de fundo escura */
+        background-image: url("https://interfaceingame.com/wp-content/uploads/gris/gris-forest-1920x1080.jpg");
+        color: white; /* Cor do texto branca */
+        font-family: Arial, sans-serif; /* Fonte do texto */
+        text-align: center;
+    }
 a {
     text-decoration: none;
 }
@@ -20,4 +20,18 @@ a:hover {
 
 .Menu li{
     list-style: none;  
+}
+
+textarea{
+    resize:vertical;
+}
+
+input[type="submit"] {
+    background-color: green; 
+    color: white; 
+    border: none; 
+    padding: 10px 15px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    border-radius: 5px; 
 }
